# saegim

./: .gitignore  CLAUDE.md  README.md
AnkiParserSwift/: Package.swift
AnkiParserSwift/Sources/AnkiParser/: AnkiParser.swift
FSRSSwift/: Package.swift
FSRSSwift/FSRSSwiftFFI.xcframework/: Info.plist
anki-parser/: .gitignore  Cargo.toml  build-swift.sh  uniffi.toml
anki-parser/src/: archive.rs  database.rs  error.rs  html.rs  lib.rs  media.rs  models.rs
fsrs-swift/: .gitignore  Cargo.toml  build-swift.sh  build.rs  uniffi.toml
fsrs-swift/src/: lib.rs
saegim/: .gitignore
saegim/saegim/: ContentView.swift  CoverGenerator.swift  MediaStorage.swift  Persistence.swift  SaegimApp.swift  saegimApp.swift
saegim/saegim.xcodeproj/: project.pbxproj
saegim/saegim/AppIcon.icon/: icon.json
saegim/saegim/Config/: SupabaseConfig.swift.template  SupabaseConfig.template.swift
saegim/saegim/Extensions/: Color+Hex.swift
saegim/saegim/Models/: Card.swift  CardModel.swift  Deck.swift  DeckModel.swift
saegim/saegim/Services/: DataRepository.swift  DatabaseManager.swift  SupabaseManager.swift  SyncStateManager.swift
saegim/saegim/Views/: AllCardsView.swift  AnkiImportView.swift  CSVImportView.swift  CardEditorSheet.swift  DashboardView.swift  DeckDetailView.swift  DueTodayView.swift  NewDeckSheet.swift  SettingsView.swift  StudySessionView.swift
saegim/saegim/Views/Auth/: AuthView.swift
saegim/saegim/Views/Components/: OfflineBanner.swift  ScrollHeader.swift  SyncStatusBar.swift  SyncStatusDetailView.swift  SyncStatusIcon.swift  ToastManager.swift  ToastView.swift
saegim/saegim/iOS/: ContentView_iOS.swift  SaegimApp_iOS.swift
saegim/saegim/iOS/Views/: DeckListView_iOS.swift  DueTodayView_iOS.swift  SettingsView_iOS.swift
supabase/migrations/: 20250108_server_side_timestamps.sql
(+2 files in other folders)
